section3 is done

--- a/section3.less
+++ b/section3.less
@@ -1,1 +1,32 @@
 // main: styles.less
+
+// main: styles.less
+.section3 {
+  .section3_container {
+    padding: 125px 0;
+
+    .content_block {
+      display: flex;
+      justify-content: space-between;
+
+      .right_block {
+        width: 445px;
+        .text_block {
+          .title {
+            font-weight: 500;
+            font-size: 36px;
+            line-height: 48px;
+            color: #091133;
+          }
+
+          .text {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 26px;
+            color: #6f7cb2;
+          }
+        }
+      }
+    }
+  }
+}
