Basic layout of desktop version of website is complete

--- a/section1.less
+++ b/section1.less
@@ -1,6 +1,11 @@
 // main: styles.less
 
 .section1 {
+  background-image: url("/assets/bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
   .section1_container {
     padding: 303px 0 386px 0;
     display: flex;
