--- a/section6.less
+++ b/section6.less
@@ -1,12 +1,13 @@
 // main: styles.less
 
 .section6 {
-  background-color: #e7ecff;
+  background: rgba(229, 235, 255, 0.5);
+
   .section6_container {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 237px 0 172px 0;
+    padding: 160px 0 0 0;
 
     .content_block {
       max-width: 600px;
